Fix news items alignments

--- a/assets/stylesheets/components/_home_new.scss
+++ b/assets/stylesheets/components/_home_new.scss
@@ -84,6 +84,10 @@
         text-decoration: underline;
       }
     }
+
+    li {
+      display: inline-flex;
+    }
   }
 
   .govuk-news {
